--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -43,17 +43,17 @@ jobs:
           APP_DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_API_TOKEN_TEST }}
           DATABASE_URL: postgres://postgres:password!@127.0.0.1:5432/basil-worker-manager-db?charset=UTF-8
         run: |
-          chmod -R 0755 var/cache
-          chmod -R 0755 var/log
-          ls -la var/cache
+#          chmod -R 0755 var/cache
+#          chmod -R 0755 var/log
+#          ls -la var/cache
           composer integration-setup
           sleep 10
-          ls -la var/log
+#          ls -la var/log
           docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml logs nginx
           curl http:/localhost:9090/foo/machine
-          ls -la var/log
+#          ls -la var/log
           docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml logs nginx
-          cat var/log/prod.log
+#          cat var/log/prod.log
 
 #          curl http:/0.0.0.0:9090/foo/machine
 #          composer test-integration-async
