--- a/tests/docker/self-compose.yml
+++ b/tests/docker/self-compose.yml
@@ -21,8 +21,8 @@ services:
         MESSENGER_TRANSPORT_DSN: amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/%2f/messages
         APP_DIGITALOCEAN_ACCESS_TOKEN: ${APP_DIGITALOCEAN_ACCESS_TOKEN}
     container_name: test-basil-worker-manager
-    volumes:
-      - ../../var:/app/var:rw
+#    volumes:
+#      - ../../var:/app/var:rw
     depends_on:
       - postgres
       - rabbitmq
