--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -45,4 +45,4 @@ jobs:
         run: |
           composer integration-setup
           sleep 10
-          curl http:/localhost:9090/foo/machine
+          composer test-integration-async
