Test against web server in integration environment (#571)

--- a/tests/docker/self-compose.yml
+++ b/tests/docker/self-compose.yml
@@ -1,6 +1,16 @@
 version: "3"
 
 services:
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: nginx
+    ports:
+      - 9090:80
+    links:
+      - app:app
+
   app:
     build:
       context: ../..
@@ -9,8 +19,6 @@ services:
         MESSENGER_TRANSPORT_DSN: amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/%2f/messages
         APP_DIGITALOCEAN_ACCESS_TOKEN: ${APP_DIGITALOCEAN_ACCESS_TOKEN}
     container_name: test-basil-worker-manager
-    volumes:
-      - ../../var:/app/var:rw
     depends_on:
       - postgres
       - rabbitmq
