--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -52,3 +52,7 @@ jobs:
           DATABASE_URL: postgres://postgres:password!@127.0.0.1:5432/basil-worker-manager-db?charset=UTF-8
         run: |
           composer test-integration
+
+      - name: "Debug: output messenger log"
+        if: ${{ failure() }}
+        run: docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml exec app cat /var/log/messenger.err.log
