Force create self in CI integration tests

--- a/composer.json
+++ b/composer.json
@@ -106,7 +106,7 @@
             "@test-functional"
         ],
         "integration-pull": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml pull",
-        "integration-start": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml up -d --build",
+        "integration-start": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml up -d --build --force-recreate",
         "integration-status": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml ps",
         "integration-stop": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml stop",
         "integration-destroy": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml down",
