--- a/.github/workflows/tests-integration-health-check.yml
+++ b/.github/workflows/tests-integration-health-check.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   integration:
-    name: Integration tests - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
+    name: Integration tests - health check - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
