--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   integration:
-    name: Integration tests - machine creation - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
+    name: Machine creation - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
