--- a/.github/workflows/tests-integration-health-check.yml
+++ b/.github/workflows/tests-integration-health-check.yml
@@ -5,12 +5,10 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   integration:
-    name: Machine creation - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
+    name: Health check - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
@@ -51,8 +49,4 @@ jobs:
           APP_DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_API_TOKEN_TEST }}
           DATABASE_URL: postgres://postgres:password!@127.0.0.1:5432/basil-worker-manager-db?charset=UTF-8
         run: |
-          composer test-integration-machine-creation
-
-      - name: "Debug: output messenger log"
-        if: ${{ failure() }}
-        run: docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml exec app cat /var/log/messenger.err.log
+          composer test-integration-health-check
