--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -53,6 +53,6 @@ jobs:
         run: |
           composer test-integration
 
-      - name: "Debug: output messenger log"
-        if: ${{ failure() }}
-        run: docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml exec app cat /var/log/messenger.err.log
+      - name: "Debug: output messenger log ..."
+        if: ${{ always() }}
+        run: docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml logs --no-log-prefix app | grep "\[messenger\]"
