--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -6,6 +6,11 @@ monolog:
             handler: nested
             excluded_http_codes: [404, 405]
             buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+        messenger:
+            type: stream
+            path: "%kernel.logs_dir%/messenger.%kernel.environment%.log"
+            level: debug
+            channels: ["messenger_audit"]
         nested:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
