--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Docker layer caching
         uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
 
       - name: Setup integration environment
         env:
