--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,6 +24,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $messengerAuditLogger: '@monolog.logger.messenger_audit'
+            $healthCheckLogger: '@monolog.logger.health_check'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -125,3 +126,10 @@ services:
         arguments:
             $factories:
                 - '@App\Services\ExceptionFactory\MachineProvider\GuzzleExceptionFactory'
+
+    App\Services\ServiceStatusInspector\ServiceStatusInspector:
+        arguments:
+            $componentInspectors:
+                database: '@App\Services\ServiceStatusInspector\DatabaseInspector'
+                message_queue: '@App\Services\ServiceStatusInspector\MessageQueueInspector'
+                machine_provider_digital_ocean: '@App\Services\ServiceStatusInspector\DigitalOceanMachineProviderInspector'
