--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,4 @@
 {
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/webignition/Client"
-        }
-    ],
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
@@ -28,7 +22,7 @@
         "symfony/monolog-bundle": "^3.6",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/yaml": "5.2.*",
-        "toin0u/digitalocean-v2": "dev-delete-droplet-by-tag",
+        "toin0u/digitalocean-v2": "^4.4",
         "webignition/symfony-messenger-message-dispatcher": ">=0.4,<1"
     },
     "require-dev": {
