Use Doctrine transport

--- a/tests/docker/self-compose.yml
+++ b/tests/docker/self-compose.yml
@@ -16,9 +16,8 @@ services:
       context: ../..
       args:
         DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@postgres:5432/basil-worker-manager-db?serverVersion=12&charset=utf8
-        MESSENGER_TRANSPORT_DSN: amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/%2f/messages
+        MESSENGER_TRANSPORT_DSN: doctrine://default
         APP_DIGITALOCEAN_ACCESS_TOKEN: ${APP_DIGITALOCEAN_ACCESS_TOKEN}
     container_name: test-basil-worker-manager
     depends_on:
       - postgres
-      - rabbitmq
