--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ DATABASE_URL=postgresql://postgres:password!@0.0.0.0:5432/basil-worker-manager-d
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-MESSENGER_TRANSPORT_DSN=amqp://guest:guest@0.0.0.0:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@0.0.0.0:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
