--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -25,7 +25,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: amqp, pgsql
+          extensions: pgsql
 
       - name: Download dependencies
         uses: php-actions/composer@v2
