--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8",
-        "ext-amqp": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
@@ -15,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.0",
         "symfony/console": "5.2.*",
+        "symfony/doctrine-messenger": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
